# nibiru-workshops

./: README.md
00-smart-contract-kickstart/: .gitignore  Cargo.toml  README.md  justfile  package.json  pres-ws-contracts-on-nibiru.md  theme-light.css  theme.css
00-smart-contract-kickstart/artifacts/: checksums.txt  checksums_intermediate.txt  todolist.wasm
00-smart-contract-kickstart/contracts/todolist/: Cargo.toml
00-smart-contract-kickstart/contracts/todolist/src/: contract.rs  error.rs  events.rs  lib.rs  msgs.rs  state.rs
00-smart-contract-kickstart/scripts/: lib.sh  setup_env.sh
