[workspace]
members = ["contracts/*"]
# members = ["contracts/*", "packages/*", "scripts"]
resolver = "2"

# Dependencies can be inherited from a workspace by specifying the dependency in
# the `[workspace.dependencies]` table. To use workspace crates, add them to the
# `[dependencies]` table with `workspace = true`.
# ```
# anyhow = { workspace = true }
# ```
[workspace.dependencies]
cosmwasm-schema = { version = "1.4.1" }
cosmwasm-std = { version = "1.4.1" }
cw-storage-plus = { version = "1.1.0" }
anyhow = "1"
thiserror = "1.0.49"
