[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "1.0.2" }
# cw2 = { version = "1.1.1" }    # Fro CW-2 contract ownership
# cw20 = { version = "1.1.1" }   # For CW-20 fungible token standard
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { version = "0.17.0" }
anyhow = { workspace = true }
